--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "express-locallibrary-tutorial",
   "version": "0.0.0",
   "private": true,
+  "homepage": "https://Mamont777.github.io/Library-express/",
   "scripts": {
     "start": "node ./bin/www",
     "dev": "nodemon ./bin/www"
