--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "express-locallibrary-tutorial",
   "version": "0.0.0",
+  "engines": {
+    "node": ">=18.17.0"
+  },
   "private": true,
   "homepage": "https://Mamont777.github.io/Library-express/",
   "scripts": {
